# restaurant_management2

./: pyproject.toml
restaurant_management/: hooks.py  install.py
restaurant_management/public/css/: restaurant.css
restaurant_management/restaurant_management/: api.py  guest_api.py
restaurant_management/restaurant_management/doctype/restaurant_order/: restaurant_order.js  restaurant_order.json  restaurant_order.py
restaurant_management/restaurant_management/doctype/restaurant_order_item/: restaurant_order_item.json
restaurant_management/restaurant_management/doctype/table_reservation/: __init__.py  table_reservation.json  table_reservation.py
restaurant_management/restaurant_management/page/kitchen_display/: kitchen_display.css  kitchen_display.js
restaurant_management/restaurant_management/page/restaurant_pos/: restaurant_pos.css  restaurant_pos.html  restaurant_pos.js
restaurant_management/workspace_sidebar/: restaurant_management.json
restaurant_management/www/restaurant/: book.html  index.html  order.html  order.py  qrcodes.html  qrcodes.py  status.html  status.py
